@@ -1,3 +1,11 @@
+2016-02-14  Barton E. Schaefer  <schaefer@zsh.org>
+
+	* 37961: Src/Zle/complist.c: in interactive menuselection, use of
+	"compadd -x" (e.g. the "warnings" zstyle) may have replaced the
+	completion list, so skip highlighting of the current selection
+	until a subsequent keystroke has regenerated the original listing;
+	fixes crash on bad memory access
+
 2016-02-11  Eric Cook  <llua@gmx.com>
 
 	* 37913: Completion/BSD/Command/_gstat,
